trying to figuire out spotlight spacing issues

--- a/public/styles.css
+++ b/public/styles.css
@@ -9,7 +9,7 @@
   height: 100%;
 }
 
-.oppDeck {
+.inOppDeck {
   margin-right: 5px;
 }
 
@@ -42,11 +42,19 @@
   top: 0; left: 0; bottom: 0; right: 0;
   border: solid black;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
-#spotlightCenter {
+#spotlightCenter, #spotlightLeft, #spotlightRight {
   height: 100%;
+}
+
+#spotlightLeft img {
+  right: 50%;
+}
+
+#spotlightRight img {
+  left: 50%;
 }
 
 #cardRow {
